<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="14dp"
    android:layout_marginEnd="14dp">

    <TextView
        android:id="@+id/txt_chart_price"
        style="@style/CoinBitText.Huge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$40.90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_chart_updown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingEnd="4dp"
        android:text="@string/upwards_filled_arrow"
        android:textColor="@color/colorGain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_chart_price"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txt_chart_change1"
        style="@style/CoinBitText.BodyTertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingEnd="12dp"
        android:text="-$0.04"
        app:layout_constraintBottom_toBottomOf="@+id/txt_chart_updown"
        app:layout_constraintStart_toEndOf="@+id/txt_chart_updown"
        app:layout_constraintTop_toBottomOf="@+id/txt_chart_price"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txt_chart_change2"
        style="@style/CoinBitText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+8.1%"
        android:textColor="@color/colorGain"
        app:layout_constraintBottom_toBottomOf="@+id/txt_chart_change1"
        app:layout_constraintStart_toEndOf="@+id/txt_chart_change1" />

    <com.robinhood.spark.SparkView
        android:id="@+id/spark_chart"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_chart_change1"
        app:spark_animateChanges="true"
        app:spark_lineColor="@color/colorPrimary"

        app:spark_scrubEnabled="true" />


    <TextView
        android:id="@+id/txtChartError"
        style="@style/CoinBitText.Body1Alternate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/some_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/spark_chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spark_chart"
        app:layout_constraintTop_toTopOf="@+id/spark_chart" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="7"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spark_chart">


        <RadioButton
            android:id="@+id/radio_12h"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1h"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_1day"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1day"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_1weak"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1week"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_1month"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1month"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_3month"

            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_3month"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_1year"

            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1year"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_allTime"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_all"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />


    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>