<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="14dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="14dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

    <TextView
        style="@style/CoinBitText.Body1Alternate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="14dp"
        android:background="@drawable/background_rounded_all"
        android:padding="14dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />


        <TextView
            android:id="@+id/not_use_website"
            style="@style/CoinBitText.TitleAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/web_site"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/notUseTwiiter"
            style="@style/CoinBitText.TitleAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/twitter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/not_use_website" />

        <TextView
            android:id="@+id/notUseReddit"
            style="@style/CoinBitText.TitleAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/reddit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notUseTwiiter" />

        <TextView
            android:id="@+id/notUseGitHub"
            style="@style/CoinBitText.TitleAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/github"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notUseReddit" />

        <TextView
            android:id="@+id/tvVolumeAmount"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"
            app:layout_constraintBottom_toBottomOf="@+id/not_use_website"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/not_use_website" />


        <TextView
            android:id="@+id/txt_twitter"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"
            app:layout_constraintBottom_toBottomOf="@+id/notUseTwiiter"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/not_use_website" />

        <TextView
            android:id="@+id/txt_reddit"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"
            app:layout_constraintBottom_toBottomOf="@+id/notUseReddit"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/notUseTwiiter" />

        <TextView
            android:id="@+id/txt_github"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"
            app:layout_constraintBottom_toBottomOf="@+id/notUseGitHub"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/notUseReddit" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/secondaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notUseGitHub" />

        <TextView
            android:id="@+id/txt_more_date"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="7"
            android:text="Some Date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>